# AutoLogin-and-Menu-Bypass

./: .gitignore  Attach_WinDbg.bat  Attach_WinDbg.ps1  CMakeLists.txt  IF PATCH HAPPENS.md  README.md
src/: Boilerplate.cpp  Boilerplate.h  Config.cpp  Config.h  Diagnostics.cpp  Diagnostics.h  Hooks.cpp  Hooks.h  KernelMouseInterface.cpp  KernelMouseInterface.h  PatternScanner.cpp  PatternScanner.h  main.cpp
